force-app/main/default/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Attended_Dreamforce__c</fullName>
        <formula>IMAGE( &quot;/servlet/servlet.FileDownload?file=&quot; &amp;
CASE( Dreamforce__c, 
&quot;yes&quot;, &quot;Image ID&quot;, 
&quot;No&quot;, &quot;Image ID&quot;
, &quot;&quot;),&quot;Image Not Available...&quot;,18,18)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attended Dreamforce</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dreamforce__c</fullName>
        <label>Dreamforce</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Age__c</fullName>
        <formula>If(ISBLANK(HealthCloudGA__DeceasedDate__c), 

IF( NOT( ISBLANK( Birthdate ) ) , TEXT(IF( NOT( ISBLANK( Birthdate ) ) , 
IF( DATE( 2000 , MONTH( Birthdate ) , DAY( Birthdate ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ), 
YEAR (Today()) - YEAR ( Birthdate ), 
YEAR (Today()) - YEAR ( Birthdate ) -1 ), 
null))+ &apos; Years &apos;, &apos;&apos;), 

IF( NOT( ISBLANK( Birthdate ) ) , TEXT(IF( NOT( ISBLANK( Birthdate ) ) , 
IF( DATE( 2000 , MONTH( Birthdate ) , DAY( Birthdate ) ) &lt;= DATE( 2000 , MONTH( HealthCloudGA__DeceasedDate__c ) , DAY( HealthCloudGA__DeceasedDate__c ) ), 
YEAR (HealthCloudGA__DeceasedDate__c) - YEAR ( Birthdate ), 
YEAR (HealthCloudGA__DeceasedDate__c) - YEAR ( Birthdate ) -1 ), 
null))+ &apos; Years &apos;, &apos;&apos;) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__BirthDate__c</fullName>
        <formula>IF( NOT( ISBLANK( Birthdate ) ) , CASE(MONTH( Birthdate ),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)+ &apos; &apos;+TEXT(DAY(Birthdate))+&apos;,&apos;+&apos; &apos;+TEXT(Year(Birthdate)), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Birth Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CountryOfBirth__c</fullName>
        <label>Country Of Birth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HealthCloudGA__Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CreatedFromLead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DeceasedDate__c</fullName>
        <description>Date of death, if applicable</description>
        <label>Deceased Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Decline to Specify</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IndividualId__c</fullName>
        <formula>Account.HealthCloudGA__IndividualId__c</formula>
        <label>Individual ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IndividualType__c</fullName>
        <description>Individual Type</description>
        <label>Individual Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                    <default>true</default>
                    <label>Individual</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicalRecordNumber__c</fullName>
        <description>The medical record number is organization specific. The number is used by the hospital as a systematic documentation of a patient´s medical history and care during each hospital stay.</description>
        <label>Medical Record Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PreferredName__c</fullName>
        <label>Preferred Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PrimaryLanguage__c</fullName>
        <label>Primary Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HealthCloudGA__Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SecondaryLanguage__c</fullName>
        <label>Secondary Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HealthCloudGA__Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemId__c</fullName>
        <description>Unique external Id on contacts.</description>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <defaultValue>&quot;Health1-&quot;+$Organization.Id</defaultValue>
        <description>Identifies the system that created the record and owns update rights to it.</description>
        <inlineHelpText>Identifies the system that created the record and owns update rights to it. Defaults to Health1 for manually created records.</inlineHelpText>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Load_ID__c</fullName>
        <label>Load ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCP__c</fullName>
        <label>PCP</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>If the Contact is no longer with the Account it is directly associated to, it should be &quot;Inactive&quot;.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__SurveyReminder__c</fullName>
        <defaultValue>&apos;&apos;</defaultValue>
        <label>SurveyReminder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>TIMBASURVEYS__Survey__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__reminderStringSize__c</fullName>
        <formula>LEN(TIMBASURVEYS__SurveyReminder__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>reminderStringSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>My_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>HealthCloudGA__IndustriesBusiness</fullName>
        <active>true</active>
        <description>Represents a Business</description>
        <label>Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>HealthCloudGA__IndustriesIndividual</fullName>
        <active>true</active>
        <description>Represents an Individual</description>
        <label>Individual</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>HealthCloudGA__NotAllowingConversionFromIndividual</fullName>
        <active>false</active>
        <errorConditionFormula>1!=1</errorConditionFormula>
        <errorMessage>The Individual record type can&apos;t be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HealthCloudGA__NotAllowingConversionToIndividual</fullName>
        <active>false</active>
        <description>Not allowing changing the record type of &quot;non-Individual&quot; to &quot;Individual&quot; record type</description>
        <errorConditionFormula>1!=1</errorConditionFormula>
        <errorMessage>The record type can&apos;t be changed to Individual.</errorMessage>
    </validationRules>
</CustomObject>